Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-26745

QWidget: Size constraints from the layout are not propagated to the Window.

XMLWordPrintable

    • 82860b133c123d8136cf13e99f66c4b55badc5fa

      For example, the "About Qt" dialog of Qt Designer or the examples/mainwindows/mdi or Qt Creator's option dialog can be squeezed to arbitrarily small size.

      However, setting a minimum size explicitly seems to work.

        For Gerrit Dashboard: QTBUG-26745
        # Subject Branch Project Status CR V

            kleint Friedemann Kleint
            kleint Friedemann Kleint
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes